--- a/.gitignore
+++ b/.gitignore
@@ -170,7 +170,7 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 # Saved data
-values.bin
 conversation_history.json
 kraks_data.pkl
 leet_winners.json
+ekavika.json
