--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,7 @@ cython_debug/
 .pypirc
 # Saved data
 conversation_history.json
+conversation_history_old.json
 kraks_data.pkl
 leet_winners.json
 ekavika.json
