--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["-l", "DEBUG", "-nick", "jl3B3"],
+            "args": ["-l", "DEBUG", "-nick", "jl3b2"],
         }
     ],
 }
