Fix: Update WORDS_FILE to use JSON format in .env.sample
• Changed WORDS_FILE from kraks_data.pkl to kraks_data.json
• Aligns with modern data storage practices using JSON instead of pickle
• Maintains consistency with other configuration files

--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,7 @@ BOT_NAME=LeetIRCBot
 LOG_LEVEL=INFO
 HISTORY_FILE=conversation_history.json
 EKAVIKA_FILE=ekavika.json
-WORDS_FILE=kraks_data.pkl
+WORDS_FILE=kraks_data.json
 SUBSCRIBERS_FILE=subscribers.json
 RECONNECT_DELAY=60
 QUIT_MESSAGE=🍺 Nähdään! 🍺
