Add v2.0.0 with password-protected admin commands
- Add BOT_VERSION = 2.0.0
- Add ADMIN_PASSWORD environment variable with random 8-char password
- Add password-protected admin commands: !join, !part, !nick, !quit, !raw
- Add !version command to show bot version
- Update !help command to show admin commands with asterisk (*)
- Centralize all command processing in commands.py
- Replace duplicate console command handling with unified processor
- Add comprehensive help text with emojis and categorization

--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,7 @@ WORDS_FILE=general_words.json
 SUBSCRIBERS_FILE=subscribers.json
 RECONNECT_DELAY=60
 QUIT_MESSAGE=🍺 Nähdään! 🍺
+ADMIN_PASSWORD=abc123xy
 
 # Server Configurations
 # Format: SERVERx_HOST, SERVERx_PORT, SERVERx_CHANNELS, SERVERx_KEYS
