--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-bs4
-dotenv
-google-api-python-client
-isodate
-openai
-packaging
-PySocks
-selenium
-requests
-feedparser
-libvoikko
+requests>=2.25.0
+beautifulsoup4>=4.9.0
+# Development dependencies
+# black>=22.0.0
+# flake8>=4.0.0
+# isort>=5.10.0
+# bandit>=1.7.0
+# safety>=2.0.0
