Add configurable USE_NOTICES setting for IRC output mode
- Added USE_NOTICES environment variable to control output behavior
- When USE_NOTICES=true, all channel responses are sent as IRC NOTICEs
- When USE_NOTICES=false, responses are sent as regular PRIVMSGs
- Updated .env and .env.sample files with the new setting
- Modified BotManager and IRCMessageProcessor to respect the setting
- Added _send_response() helper method for unified output routing
- Updated all response functions to use the new routing system

Features:
- Weather commands (!s) now respect the USE_NOTICES setting
- Tamagotchi responses use NOTICEs when configured
- URL title fetching uses NOTICEs when configured
- All legacy command responses honor the setting
- Console output remains unchanged (print statements)

Technical improvements:
- Centralized message routing through _send_response()
- Consistent behavior across all bot components
- Easy toggle between NOTICE and PRIVMSG modes
- Backward compatibility maintained

This allows server operators to configure whether the bot uses
NOTICEs (which don't trigger highlights) or regular messages.

--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,11 @@ RECONNECT_DELAY=60
 QUIT_MESSAGE=🍺 Nähdään! 🍺
 ADMIN_PASSWORD=abc123xy
 
+# Message Output Settings
+# USE_NOTICES=true   # Send all channel responses as IRC NOTICEs instead of regular messages
+# USE_NOTICES=false  # Send channel responses as regular PRIVMSG (default behavior)
+USE_NOTICES=true
+
 # Server Configurations
 # Format: SERVERx_HOST, SERVERx_PORT, SERVERx_CHANNELS, SERVERx_KEYS
 # Where x is a unique identifier for each server
