--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,11 @@ ADMIN_PASSWORD=abc123xy
 # USE_NOTICES=false  # Send channel responses as regular PRIVMSG (default behavior)
 USE_NOTICES=true
 
+# Tamagotchi Settings
+# TAMAGOTCHI_ENABLED=true   # Enable tamagotchi responses to trigger words
+# TAMAGOTCHI_ENABLED=false  # Disable tamagotchi responses (can be toggled with !tamagotchi command)
+TAMAGOTCHI_ENABLED=true
+
 # Server Configurations
 # Format: SERVERx_HOST, SERVERx_PORT, SERVERx_CHANNELS, SERVERx_KEYS
 # Where x is a unique identifier for each server
