Add configurable GPT conversation history limit
- Add GPT_HISTORY_LIMIT configuration to .env and .env.sample (default: 100)
- Update GPTService to use configurable history limit instead of hardcoded value
- Modify bot_manager.py to load and pass history limit configuration to GPT service
- Add comprehensive tests for history limiting functionality
- History limit applies to user+assistant messages, system prompt is preserved
- When limit is exceeded, oldest messages are removed while keeping most recent ones

Features:
- Configurable conversation memory to manage API costs and context size
- Automatic cleanup of old conversation history
- Maintains conversation context while preventing unlimited growth
- Backward compatible with existing installations (default: 100 messages)

--- a/.env.sample
+++ b/.env.sample
@@ -26,6 +26,10 @@ USE_NOTICES=true
 # TAMAGOTCHI_ENABLED=false  # Disable tamagotchi responses (can be toggled with !tamagotchi command)
 TAMAGOTCHI_ENABLED=true
 
+# GPT Service Settings
+# GPT_HISTORY_LIMIT=100  # Maximum number of messages to keep in conversation history (default: 100)
+GPT_HISTORY_LIMIT=100
+
 # Server Configurations
 # Format: SERVERx_HOST, SERVERx_PORT, SERVERx_CHANNELS, SERVERx_KEYS
 # Where x is a unique identifier for each server
