Fix Black formatting and GitHub Actions CI issues
- Format all Python files with Black for PEP 8 compliance
- Fix import sorting with isort and add .isort.cfg for Black compatibility
- Update test framework to support CI mode with --ci flag
- Add test result file generation (test-results.txt, test-coverage.txt)
- Update GitHub Actions workflow to use CI mode and handle missing artifacts
- Resolve all linting issues: Black, isort, and test artifact problems

All 49 tests pass successfully with proper CI integration.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,7 +59,7 @@ jobs:
       run: |
         # Set PYTHONPATH to include current directory
         export PYTHONPATH="${PYTHONPATH}:$(pwd)"
-        python test_framework.py
+        python test_framework.py --ci
       env:
         # Set dummy environment variables for testing
         IRC_NICKNAME: test_bot
@@ -74,6 +74,7 @@ jobs:
         path: |
           test-results.txt
           test-coverage.txt
+        if-no-files-found: warn
         retention-days: 30
 
   lint:
