Add FMI warning and Otiedote monitoring services
- Convert standalone fmi_varoitukset.py to services/fmi_warning_service.py
- Convert standalone otiedote_monitor.py to services/otiedote_service.py
- Integrate both services into bot_manager.py with automatic startup/shutdown
- Add callback handlers for sending warnings/releases to IRC channels
- Update services/__init__.py to export new services
- Add required dependencies (feedparser, selenium) to requirements.txt
- Create test_monitoring_services.py for service validation
- Remove original standalone files after successful conversion

Features:
- FMI weather warnings filtered for Joensuu/Pohjois-Karjala region
- Otiedote.fi press release monitoring for Pohjois-Karjalan pelastuslaitos
- Background monitoring with configurable intervals (5 minutes default)
- State persistence to prevent duplicate notifications
- Automatic integration with existing IRC bot infrastructure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 requests>=2.25.0
 beautifulsoup4>=4.9.0
 python-dotenv>=0.19.0
+feedparser>=6.0.0
+selenium>=4.0.0
 # Development dependencies
 # black>=22.0.0
 # flake8>=4.0.0
