--- a/.env.sample
+++ b/.env.sample
@@ -27,6 +27,15 @@ USE_NOTICES=true
 # TAMAGOTCHI_ENABLED=false  # Disable tamagotchi responses (can be toggled with !tamagotchi command)
 TAMAGOTCHI_ENABLED=true
 
+# Title Fetching Blacklist Settings
+# URLs containing these domains will be skipped for title fetching
+# Separate multiple domains with commas (no spaces)
+TITLE_BLACKLIST_DOMAINS=youtube.com,youtu.be,facebook.com,fb.com,x.com,twitter.com,instagram.com,tiktok.com,discord.com,reddit.com,imgur.com
+
+# File extensions that will be skipped for title fetching
+# Separate multiple extensions with commas (no spaces)
+TITLE_BLACKLIST_EXTENSIONS=.jpg,.jpeg,.png,.gif,.mp4,.webm,.pdf,.zip,.rar,.mp3,.wav,.flac
+
 # GPT Service Settings
 # GPT_HISTORY_LIMIT=100  # Maximum number of messages to keep in conversation history (default: 100)
 GPT_HISTORY_LIMIT=100
