--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ WEATHER_API_KEY=your_openweathermap_api_key_here
 ELECTRICITY_API_KEY=your_electricity_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 YOUTUBE_API_KEY=your_youtube_api_key_here
+EUROJACKPOT_API_KEY=your_eurojackpot_api_key_here
 
 # Bot Configuration Settings (moved from main.py)
 BOT_NAME=LeetIRCBot
