TLS is working and new settings for bypassing cert checks in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -48,18 +48,23 @@ GPT_HISTORY_LIMIT=100
 # Server 1
 SERVER1_HOST=irc.atw-inter.net
 SERVER1_PORT=6667
-SERVER1_CHANNELS=#samplechannel
+SERVER1_CHANNELS=#LeetIRCPythonBot
 SERVER1_KEYS=
+SERVER1_TLS=true
+SERVER1_ALLOW_INSECURE_TLS=true
 
 # Server 2 (example - uncomment and configure as needed)
 #SERVER2_HOST=irc.libera.chat
 #SERVER2_PORT=6667
 #SERVER2_CHANNELS=#python,#linux
 #SERVER2_KEYS=
+#SERVER2_TLS=false
+#SERVER2_ALLOW_INSECURE_TLS=false
 
 # Add more servers as needed following the same pattern
 #SERVER3_HOST=...
 #SERVER3_PORT=...
 #SERVER3_CHANNELS=...
 #SERVER3_KEYS=...
-
+#SERVER3_TLS=...
+#SERVER3_ALLOW_INSECURE_TLS=...
