--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ beautifulsoup4>=4.9.0
 python-dotenv>=0.19.0
 feedparser>=6.0.0
 selenium>=4.0.0
+google-api-python-client>=2.0.0
+openai>=1.0.0
 # Development dependencies
 # black>=22.0.0
 # flake8>=4.0.0
