--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,7 @@ subscriptions.json
 voikko*
 tamagotchi_state.json
 eurojackpot.json
+
+# User data / runtime state files
+drink_tracking.json
+privacy_settings.json
