Refactor privacy management: merge privacy_manager into data_manager and use env vars

--- a/.env.sample
+++ b/.env.sample
@@ -41,6 +41,13 @@ TITLE_BLACKLIST_EXTENSIONS=.jpg,.jpeg,.png,.gif,.mp4,.webm,.pdf,.zip,.rar,.mp3,.
 # GPT_HISTORY_LIMIT=100  # Maximum number of messages to keep in conversation history (default: 100)
 GPT_HISTORY_LIMIT=100
 
+# Drink Tracking Privacy Settings
+# Users who have opted out of drink tracking (!antikrak command)
+# Format: DRINK_TRACKING_OPT_OUT=server1:nick1,nick2;server2:nick3,nick4
+# Example: DRINK_TRACKING_OPT_OUT=irc.atw-inter.net:alice,bob;irc.libera.chat:charlie
+# Leave empty or comment out if no users have opted out
+DRINK_TRACKING_OPT_OUT=
+
 # Server Configurations
 # Format: SERVERx_HOST, SERVERx_PORT, SERVERx_CHANNELS, SERVERx_KEYS
 # Where x is a unique identifier for each server
