--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        # Install minimal required dependencies for testing
+        pip install python-dotenv
+        # Don't install optional dependencies as they are mocked in tests
         # Install test dependencies if we had a requirements.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
@@ -40,9 +42,9 @@ jobs:
         echo "SERVER_PORT=6667" >> .env
         echo "SERVER_NAME=TestServer" >> .env
         echo "CHANNELS=#test" >> .env
-        echo "WEATHER_API_KEY=dummy_key_for_testing" >> .env
-        echo "ELECTRICITY_API_KEY=dummy_key_for_testing" >> .env
         echo "LOG_LEVEL=INFO" >> .env
+        echo "TAMAGOTCHI_ENABLED=true" >> .env
+        echo "USE_NOTICES=false" >> .env
         
         # Debug: Show the environment
         echo "Current directory: $(pwd)"
@@ -51,20 +53,23 @@ jobs:
         python -c "import sys; [print(f'  {p}') for p in sys.path]"
         echo "Files in current directory:"
         ls -la
-        echo "Testing basic imports:"
-        python -c "import config; print('config import: OK')" || echo "config import: FAILED"
-        python -c "import irc_client; print('irc_client import: OK')" || echo "irc_client import: FAILED"
     
     - name: Run tests
       run: |
         # Set PYTHONPATH to include current directory
         export PYTHONPATH="${PYTHONPATH}:$(pwd)"
+        echo "Running bot functionality tests..."
+        python tests/test_bot_functionality.py
+        echo "Running GPT service tests..."
+        python tests/test_gpt_service.py
+        echo "Running unified test framework..."
         python test_framework.py --ci
       env:
         # Set dummy environment variables for testing
         IRC_NICKNAME: test_bot
-        WEATHER_API_KEY: dummy_key_for_testing
-        ELECTRICITY_API_KEY: dummy_key_for_testing
+        BOT_NAME: TestBot
+        TAMAGOTCHI_ENABLED: true
+        USE_NOTICES: false
     
     - name: Upload test results
       uses: actions/upload-artifact@v4
