--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         # Install minimal required dependencies for testing
-        pip install python-dotenv
+        pip install python-dotenv pytest
         # Don't install optional dependencies as they are mocked in tests
         # Install test dependencies if we had a requirements.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
@@ -58,12 +58,8 @@ jobs:
       run: |
         # Set PYTHONPATH to include current directory
         export PYTHONPATH="${PYTHONPATH}:$(pwd)"
-        echo "Running bot functionality tests..."
-        python tests/test_bot_functionality.py
-        echo "Running GPT service tests..."
-        python tests/test_gpt_service.py
-        echo "Running unified test framework..."
-        python test_framework.py --ci
+        echo "Running all tests with pytest..."
+        python -m pytest -v --tb=short
       env:
         # Set dummy environment variables for testing
         IRC_NICKNAME: test_bot
