--- a/.env.sample
+++ b/.env.sample
@@ -37,6 +37,10 @@ TITLE_BLACKLIST_DOMAINS=youtube.com,youtu.be,facebook.com,fb.com,x.com,twitter.c
 # Separate multiple extensions with commas (no spaces)
 TITLE_BLACKLIST_EXTENSIONS=.jpg,.jpeg,.png,.gif,.mp4,.webm,.pdf,.zip,.rar,.mp3,.wav,.flac
 
+# Banned title texts that will be skipped for title fetching
+# Separate multiple titles with semicolons (case-insensitive matching)
+TITLE_BANNED_TEXTS=Bevor Sie zu Google Maps weitergehen;Just a moment...;403 Forbidden;404 Not Found;Access Denied
+
 # GPT Service Settings
 # GPT_HISTORY_LIMIT=100  # Maximum number of messages to keep in conversation history (default: 100)
 GPT_HISTORY_LIMIT=100
