--- a/.env.sample
+++ b/.env.sample
@@ -42,6 +42,8 @@ TITLE_BLACKLIST_EXTENSIONS=.jpg,.jpeg,.png,.gif,.mp4,.webm,.pdf,.zip,.rar,.mp3,.
 TITLE_BANNED_TEXTS=Bevor Sie zu Google Maps weitergehen;Just a moment...;403 Forbidden;404 Not Found;Access Denied
 
 # GPT Service Settings
+# OPENAI_MODEL selects the model for the Responses API (e.g., gpt-5, gpt-5-mini)
+OPENAI_MODEL=gpt-5-mini
 # GPT_HISTORY_LIMIT=100  # Maximum number of messages to keep in conversation history (default: 100)
 GPT_HISTORY_LIMIT=100
 
