--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ google-api-python-client>=2.0.0
 openai>=1.0.0
 pandas>=1.5.0
 pytz>=2022.1
+isodate
 # Development dependencies
 # black>=22.0.0
 # flake8>=4.0.0
