--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,9 @@ pytz>=2022.1
 isodate
 # Development dependencies
 # black>=22.0.0
-# flake8>=4.0.0
-# isort>=5.10.0
+isort>=5.10.0
+black
+flake8>=4.0.0
 # bandit>=1.7.0
 # safety>=2.0.0
 pytest>=8.0.0
