Got commands.py to 100% coverage. .\test uses coverage and xdist only if they are available. Updated !TEST_SUMMARY.md and requirements.txt. Added conftest.py to .coveragerc to omit.

--- a/.coveragerc
+++ b/.coveragerc
@@ -7,6 +7,7 @@ source =
 omit =
     tests/*
     */__init__.py
+    conftest.py
     test_digitraffic-api.py
     test_electricity_mapping_interactive.py
     test_find_price.py
