Added comprehensive !eurojackpot parameters. Got eurojackpot_service.py to 78% coverage. Removed ignores from .pre-commit-config.yaml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,11 +9,6 @@ repos:
     hooks:
       - id: black
         language_version: python3
-        exclude: |
-          ^commands_legacy\.py$|
-          ^services/youtube_service\.py$|
-          ^setup_hooks(?:_simple)?\.py$|
-          ^test_electricity_mapping_interactive\.py$
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.1
     hooks:
@@ -21,4 +16,4 @@ repos:
         args:
           - "--max-line-length=88"
           - "--extend-ignore=E203,E501,F401,F841,E402"
-          - "--per-file-ignores=commands_legacy.py:E999,services/youtube_service.py:E722,setup_hooks.py:W291,setup_hooks_simple.py:W291,test_electricity_mapping_interactive.py:F811,F541,tests/test_data_manager.py:F811,F821,tests/test_crypto_service.py:F811,tests/test_subscriptions_unit.py:F811,tests/test_console_commands.py:F811"
+          - "--per-file-ignores="
