--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,14 @@ google-api-python-client>=2.0.0
 openai>=1.0.0
 pandas>=1.5.0
 pytz>=2022.1
-isodate
+isodate>=0.7.2
 # Development dependencies
-# black>=22.0.0
+black>=25.1.0
 isort>=5.10.0
-black
 flake8>=4.0.0
-# bandit>=1.7.0
-# safety>=2.0.0
+coverage>=7.0.0
+pytest-cov>=4.0.0
 pytest>=8.0.0
 pytest-xdist>=3.6.1
+# bandit>=1.7.0
+# safety>=2.0.0
