Changed all 'LeetIRC Bot' texts to LeetIRCPythonBot

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-# Pytest configuration for LeetIRC Bot
+# Pytest configuration for LeetIRCPythonBot
 testpaths = tests
 python_files = test_*.py *_test.py
 python_classes = Test*
