Fix gpt_service.py and tests. Add PlantUML.puml class diagram and it's output PlantUML/LeetIRCPythonBot_ClassDiagram.svg. Update .vscode/settings.json with PlantUML settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,7 @@
         "editor.codeActionsOnSave": {
             "source.organizeImports": "explicit"
         }
-    }
+    },
+    "plantuml.exportFormat": "svg",
+    "plantuml.exportOutDir": "."
 }
