Add test_leet_winners.py to .coveragerc omit

--- a/.coveragerc
+++ b/.coveragerc
@@ -12,6 +12,7 @@ omit =
     test_electricity_mapping_interactive.py
     test_find_price.py
     test_gpt.py
+    test_leet_winners.py
     test_nanoleet.py
     test_saaennuste.py
     setup_hooks.py
