Process NOTICE messages

--- a/.env.sample
+++ b/.env.sample
@@ -21,13 +21,13 @@ ADMIN_PASSWORD=abc123xy
 
 # Message Output Settings
 # USE_NOTICES=true   # Send all channel responses as IRC NOTICEs instead of regular messages
-# USE_NOTICES=false  # Send channel responses as regular PRIVMSG (default behavior)
+# USE_NOTICES=false  # Send channel responses as regular PRIVMSG
 USE_NOTICES=true
 
 # Tamagotchi Settings
 # TAMAGOTCHI_ENABLED=true   # Enable tamagotchi responses to trigger words
 # TAMAGOTCHI_ENABLED=false  # Disable tamagotchi responses (can be toggled with !tamagotchi command)
-TAMAGOTCHI_ENABLED=true
+TAMAGOTCHI_ENABLED=false
 
 # Title Fetching Blacklist Settings
 # URLs containing these domains will be skipped for title fetching
