--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Run dependencies - updated 16.9.2025
+# Run dependencies - updated 9.10.2025
 # Run `pip install -r requirements.txt` to install the dependencies
 beautifulsoup4==4.13.5
 feedparser==6.0.12
@@ -10,5 +10,5 @@ python-dotenv==1.1.1
 pytz==2025.2
 requests==2.32.5
 selenium==4.35.0
-pytz==2025.2
 tzdata==2025.2
+pyreadline3; sys_platform == "win32"
