Logger and print refinements - safe_print integrated to log() in logger.py. Agents.md update and other small fixes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,10 @@
         }
     },
     "plantuml.exportFormat": "svg",
-    "plantuml.exportOutDir": "."
+    "plantuml.exportOutDir": ".",
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
