--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # Run dependencies - updated 9.10.2025
 # Run `pip install -r requirements.txt` to install the dependencies
-beautifulsoup4==4.13.5
-feedparser==6.0.12
-google-api-python-client==2.181.0
-isodate==0.7.2
-openai==1.107.3
+beautifulsoup4>=4.13.5
+feedparser>=6.0.12
+google-api-python-client>=2.181.0
+isodate>=0.7.2
+openai>=1.107.3
 pandas>=2.3.2
-python-dotenv==1.1.1
-pytz==2025.2
-requests==2.32.5
-selenium==4.35.0
-tzdata==2025.2
+python-dotenv>=1.1.1
+pytz>=2025.2
+requests>=2.32.5
+selenium>=4.35.0
+tzdata>=2025.2
 pyreadline3; sys_platform == "win32"
