Added TUI! - Added new interface TUI (tui.py) using urwid - Implemented click-to-copy functionality for log lines with visual flash feedback - Added pyperclip dependency for cross-platform clipboard support - Fixed electricity service to properly handle !sähkö tänään and !sähkö huomenna - Updated debug_electricity_mapping.py script to test both October 16 and 17 price data - Added missing format_daily_prices_message method to electricity service - Updated requirements.txt

--- a/.env.sample
+++ b/.env.sample
@@ -18,6 +18,13 @@ RECONNECT_DELAY=60
 QUIT_MESSAGE=🍺 Nähdään! 🍺
 ADMIN_PASSWORD=abc123xy
 
+# TUI Configuration
+# LOG_BUFFER_SIZE=1000    # Maximum number of log entries to keep in memory (default: 1000)
+LOG_BUFFER_SIZE=1000
+# AUTO_CONNECT=true       # Automatically connect to servers on startup (default: true)
+# AUTO_CONNECT=false      # Wait for manual connection
+AUTO_CONNECT=true
+
 # Message Output Settings
 # USE_NOTICES=true   # Send all channel responses as IRC NOTICEs instead of regular messages
 # USE_NOTICES=false  # Send channel responses as regular PRIVMSG
