--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ pytz>=2025.2
 requests>=2.32.5
 selenium>=4.35.0
 tzdata>=2025.2
+urwid>=3.0.3
+psutil>=6.1.0
+pyperclip>=1.8.2
 pyreadline3; sys_platform == "win32"
