--- a/.env.sample
+++ b/.env.sample
@@ -54,6 +54,11 @@ OPENAI_MODEL=gpt-5-mini
 # GPT_HISTORY_LIMIT=100  # Maximum number of messages to keep in conversation history (default: 100)
 GPT_HISTORY_LIMIT=100
 
+# Quote Command Settings
+# QUOTES_SOURCE can be a local file path or URL
+# Examples: quotes.txt, /path/to/quotes.txt, https://example.com/quotes.txt
+QUOTES_SOURCE=quotes.txt
+
 # Drink Tracking Privacy Settings
 # Users who have opted out of drink tracking (!antikrak command)
 # Format: DRINK_TRACKING_OPT_OUT=server1:nick1,nick2;server2:nick3,nick4
