Major update: Moved all code to src/, services are now in src/services/. Updated otiedote, commands etc. All tests pass except one.

--- a/.env.sample
+++ b/.env.sample
@@ -61,8 +61,8 @@ QUOTES_SOURCE=quotes.txt
 
 # Drink Tracking Privacy Settings
 # Users who have opted out of drink tracking (!antikrak command)
-# Format: DRINK_TRACKING_OPT_OUT=server1:nick1,nick2;server2:nick3,nick4
-# Example: DRINK_TRACKING_OPT_OUT=irc.atw-inter.net:alice,bob;irc.libera.chat:charlie
+# Format: DRINK_TRACKING_OPT_OUT=server1:nick1,server1:nick2,server2:nick3,server2:nick4
+# Example: DRINK_TRACKING_OPT_OUT=irc.atw-inter.net:alice,irc.atw-inter.net:bob,irc.libera.chat:charlie
 # Leave empty or comment out if no users have opted out
 DRINK_TRACKING_OPT_OUT=
 
