--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ pandas>=2.3.2
 python-dotenv>=1.1.1
 pytz>=2025.2
 requests>=2.32.5
-selenium>=4.35.0
+#selenium>=4.35.0
+playwright>=1.55.0
+# To install Playwright browser eg. fierox, run: python -m playwright install firefox
 tzdata>=2025.2
 urwid>=3.0.3
 psutil>=6.1.0
 pyperclip>=1.8.2
 pyreadline3; sys_platform == "win32"
+setuptools>=80.9.0
