Fix .env file path in config.py. Stop tracking state.json; now ignored via .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,7 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 # Saved data
+state.json
 conversation_history.json
 leet_winners.json
 ekavika.json
