Added src/debug/scrape_nimipaivat.py for scraping name days. Added scraped nimipaivat.json. Added subscriptions.json to .gitignore. Added !np command for name days.

--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,7 @@ eurojackpot.json
 drink_tracking.json
 leet_detections.json
 last_warning.json
+subscriptions.json
 
 # Ignore backup files
 *backup
