!otiedote update: New ultralight version(src/services/otiedote_json_service.py) that uses local JSON data and fetches new releases in 5min intervals. Still some work to do. Added otiedote.json to .gitignore. Updated AGENTS.md, bot_manager.py, commands.py and src/services/__init__.py for new !otiedote service. Added src/debug/scrape_otiedote.py for scraping the JSON from otiedote.fi

--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,7 @@ drink_tracking.json
 leet_detections.json
 last_warning.json
 subscriptions.json
+otiedote.json
 
 # Ignore backup files
 *backup
