!quote search works. Various fixes.

--- a/.env.sample
+++ b/.env.sample
@@ -13,7 +13,8 @@ LOG_LEVEL=INFO
 HISTORY_FILE=conversation_history.json
 EKAVIKA_FILE=ekavika.json
 WORDS_FILE=general_words.json
-SUBSCRIBERS_FILE=subscribers.json
+OTIEDOTE_FILE=otiedote.json
+STATE_FILE=state.json
 RECONNECT_DELAY=60
 QUIT_MESSAGE=🍺 Nähdään! 🍺
 ADMIN_PASSWORD=abc123xy
@@ -34,6 +35,12 @@ USE_NOTICES=true
 # TAMAGOTCHI_ENABLED=true   # Enable tamagotchi responses to trigger words
 # TAMAGOTCHI_ENABLED=false  # Disable tamagotchi responses (can be toggled with !tamagotchi command)
 TAMAGOTCHI_ENABLED=false
+
+# Ops Command Settings
+# Channels where the !ops command is allowed (gives +o to all users)
+# Leave empty to allow !ops in all channels, or specify comma-separated channel list
+# Example: OPS_ALLOWED_CHANNELS=#admin,#moderators,#special
+OPS_ALLOWED_CHANNELS=
 
 # Title Fetching Blacklist Settings
 # URLs containing these domains will be skipped for title fetching
@@ -59,12 +66,6 @@ GPT_HISTORY_LIMIT=100
 # Examples: quotes.txt, /path/to/quotes.txt, https://example.com/quotes.txt
 QUOTES_SOURCE=quotes.txt
 
-# Drink Tracking Privacy Settings
-# Users who have opted out of drink tracking (!antikrak command)
-# Format: DRINK_TRACKING_OPT_OUT=server1:nick1,server1:nick2,server2:nick3,server2:nick4
-# Example: DRINK_TRACKING_OPT_OUT=irc.atw-inter.net:alice,irc.atw-inter.net:bob,irc.libera.chat:charlie
-# Leave empty or comment out if no users have opted out
-DRINK_TRACKING_OPT_OUT=
 
 # Server Configurations
 # Format: SERVERx_HOST, SERVERx_PORT, SERVERx_CHANNELS, SERVERx_KEYS
