--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,34 +1,42 @@
 {
-    "python.formatting.provider": "black",
-    "python.formatting.blackArgs": [
-        "--line-length=88"
-    ],
-    "python.sortImports.args": [
-        "--profile",
-        "black"
-    ],
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit"
-    },
-    "python.linting.enabled": true,
-    "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": [
-        "--max-line-length=88",
-        "--extend-ignore=E203"
-    ],
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter",
-        "editor.formatOnSave": true,
-        "editor.codeActionsOnSave": {
-            "source.organizeImports": "explicit"
-        }
-    },
-    "plantuml.exportFormat": "svg",
-    "plantuml.exportOutDir": ".",
-    "python.testing.pytestArgs": [
-        "tests"
-    ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+  // ------------------------
+  // Python Formatting
+  // ------------------------
+  "python.formatter": "black",
+  "black-formatter.args": ["--line-length=88"],
+
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit"
+  },
+
+  // isort for import sorting (Black-compatible)
+  "isort.args": ["--profile", "black"],
+
+  // ------------------------
+  // Linting (new VS Code Python standards)
+  // ------------------------
+  "python.linting.enabled": true,
+
+  // Flake8
+  "flake8.enabled": true,
+  "flake8.args": ["--max-line-length=140", "--extend-ignore=E203"],
+
+  // ------------------------
+  // Testing
+  // ------------------------
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestArgs": ["tests"],
+
+  // ------------------------
+  // Language Server / Analysis
+  // ------------------------
+  "python.analysis.extraPaths": ["./src"],
+
+  // ------------------------
+  // PlantUML
+  // ------------------------
+  "plantuml.exportFormat": "svg",
+  "plantuml.exportOutDir": "."
 }
