--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@ flake8>=7.3.0
 coverage>=7.10.6
 pytest-cov>=7.0.0
 pytest>=8.4.2
+pytest-asyncio>=0.25.0
 pytest-xdist>=3.8.0
 anyio>=4.10.0
 # bandit>=1.7.0
