X api works. Updated .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,13 @@
+# Sample .env file for LeetIRCBot
 # API Keys
 # Replace these placeholders with your actual API keys
-WEATHER_API_KEY="your_openweathermap_api_key_here"
-WEATHER_FORECAST_API_KEY="your_meteosource_api_key_here"
-ELECTRICITY_API_KEY="your_electricity_api_key_here"
-OPENAI_API_KEY="your_openai_api_key_here"
-YOUTUBE_API_KEY="your_youtube_api_key_here"
-EUROJACKPOT_API_KEY="your_eurojackpot_api_key_here"
+WEATHER_API_KEY = "your_openweathermap_api_key_here"
+WEATHER_FORECAST_API_KEY = "your_meteosource_api_key_here"
+ELECTRICITY_API_KEY = "your_electricity_api_key_here"
+OPENAI_API_KEY = "your_openai_api_key_here"
+YOUTUBE_API_KEY = "your_youtube_api_key_here"
+EUROJACKPOT_API_KEY = "your_eurojackpot_api_key_here"
+X_BEARER_TOKEN = "your_x_bearer_token_here"
 
 # Bot Configuration Settings (moved from main.py)
 BOT_NAME=LeetIRCBot
