Updated .env.sample. tui wrap_mode and kraksdebug are now written in state.json when starting. krak tracking updates & fixes.

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# Sample .env file for LeetIRCBot
+# Sample .env file for LeetIRCPythonBot. Copy this file to .env and fill in the required values.
 # API Keys
 # Replace these placeholders with your actual API keys
 WEATHER_API_KEY = "your_openweathermap_api_key_here"
