Removed -n parameter from pytest.ini to make github tests work

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,4 +21,4 @@ markers =
     unit: marks tests as unit tests
 
 # Output formatting
-addopts = -v --tb=short --strict-markers --color=yes -n 8
+addopts = -v --tb=short --strict-markers --color=yes
