--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,7 @@ filterwarnings =
     ignore::RuntimeWarning:.*coroutine.*was never awaited
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::DeprecationWarning:unittest.mock.Mock is not subclass of Widget
+    ignore::pytest.PytestUnknownMarkWarning
 
 # Markers
 markers =
