feat: add Alko service integration and BAC tracking enhancements
- Add new Alko service for Finnish alcohol product search and pricing
- Implement BAC (Blood Alcohol Content) tracking with personalized profiles
- Add new !alko command for searching alcohol products
- Add !krak command for BAC calculation and profile management
- Add !krakstats command for personal drinking statistics
- Update requirements.txt with new dependencies
- Add comprehensive test coverage for new functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ google-api-python-client>=2.181.0
 isodate>=0.7.2
 openai>=1.107.3
 pandas>=2.3.2
+openpyxl>=3.1.2
 python-dotenv>=1.1.1
 pytz>=2025.2
 requests>=2.32.5
