Fix flake8 errors.

--- a/.env.sample
+++ b/.env.sample
@@ -55,7 +55,7 @@ TITLE_BLACKLIST_EXTENSIONS=.jpg,.jpeg,.png,.gif,.mp4,.webm,.pdf,.zip,.rar,.mp3,.
 
 # Banned title texts that will be skipped for title fetching
 # Separate multiple titles with semicolons (case-insensitive matching)
-TITLE_BANNED_TEXTS=Bevor Sie zu Google Maps weitergehen;Just a moment...;403 Forbidden;404 Not Found;Access Denied
+TITLE_BANNED_TEXTS=Bevor Sie zu Google Maps weitergehen;Just a moment...;403 Forbidden;404 Not Found;Access Denied;Ennen kuin jatkat Google Mapsiin
 
 # GPT Service Settings
 # OPENAI_MODEL selects the model for the Responses API (e.g., gpt-5, gpt-5-mini)
