--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ filterwarnings =
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::DeprecationWarning:unittest.mock.Mock is not subclass of Widget
     ignore::pytest.PytestUnknownMarkWarning
+    ignore:Workbook contains no default style, apply openpyxl's default:UserWarning
 
 # Markers
 markers =
