Remove accidentally committed temporary Excel file from git
The file data/~-hinnasto-tekstitiedostona.xlsx is a temporary file
that was already added to .gitignore but was accidentally committed.
Removing it from git tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,7 @@ otiedote.json
 # Alko service cache and data
 data/alko_cache.json
 data/alkon-hinnasto-tekstitiedostona.xlsx
+data/~$alkon-hinnasto-tekstitiedostona.xlsx
 
 # Ignore backup files
 *backup
