--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-dotenv>=1.1.1
 pytz>=2025.2
 requests>=2.32.5
 #selenium>=4.35.0
-playwright>=1.55.0
+# Playwright removed - legacy otiedote service no longer needed
 # To install Playwright browser eg. fierox, run: python -m playwright install firefox
 tzdata>=2025.2
 urwid>=3.0.3
